src/widgets/widgets/qtabbar.cpp
@@ -2294,6 +2294,8 @@ void QTabBar::mouseReleaseEvent(QMouseEvent *event)
         d->dragStartPosition = QPoint();
     }
 
+    // mouse release event might happen outside the tab, so keep the pressed index
+    int oldPressedIndex = d->pressedIndex;
     int i = d->indexAtPos(event->pos()) == d->pressedIndex ? d->pressedIndex : -1;
     d->pressedIndex = -1;
     QStyleOptionTabBarBase optTabBase;
@@ -2303,8 +2305,8 @@ void QTabBar::mouseReleaseEvent(QMouseEvent *event)
             (style()->styleHint(QStyle::SH_TabBar_SelectMouseType, &optTabBase, this) == QEvent::MouseButtonRelease);
     if (selectOnRelease)
         setCurrentIndex(i);
-    if (!selectOnRelease || !d->validIndex(i) || d->currentIndex == i)
-        repaint(tabRect(i));
+    if (d->validIndex(oldPressedIndex))
+        update(tabRect(oldPressedIndex));
 }
 
 /*!\reimp
